@@ -43,6 +43,7 @@ dependencies {
 	// Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+	testImplementation 'org.mockito:mockito-inline:5.2.0'
 
 	// Swagger UI
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.1'
@@ -80,4 +81,10 @@ task copyYml(type: Copy){
 
 tasks.named('test') {
 	useJUnitPlatform()
+	jvmArgs += [
+			"-Djdk.attach.allowAttachSelf=true",
+			"-XX:+EnableDynamicAgentLoading"]
+	filter {
+		includeTestsMatching "*"
+	}
 }
